Fix a bug of overflow hidden

--- a/docs/style.scss
+++ b/docs/style.scss
@@ -21,6 +21,8 @@
 	@include font-responsive-size-interval(600px, 900px, 14px, 16px);
 	@include font-responsive-size-interval(900px, 1800px, 16px, 20px);
 	@include for-big-desktop-up { font-size: 20px; }
+
+	overflow: auto;
 }
 
 body {
@@ -32,7 +34,6 @@ body {
 	padding-bottom: 6rem;
 
 	overflow-x: hidden;
-	position: relative;
 }
 
 .stile {
